--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/Build1.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/Build1.data",
+        frameworkUrl: buildUrl + "/Build1.framework.js",
+        codeUrl: buildUrl + "/Build1.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "HomiLab",
         productName: "AI_Time_Machine",
